--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -68,6 +68,30 @@ input, select, textarea {
 
 
 /*for showing actors and movies*/
+.cast-form{
+	border: 1px solid #efe0e0;
+	background-color: #0f190e;
+	text-align: center;
+}
+
+#cast-actor-name, #cast-movie-title{
+	margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-top: auto;
+    width: 90%;
+    height: 2em;
+}
+
+#submit-cast-form, #submit-cast-form1{
+	margin-bottom: 5%;
+	margin-top: 5%;
+	height: 3em;
+    line-height: 3em;
+    padding: 0 1.5em;
+}
+
+
 ul.items {
 	list-style: none;
 	padding: 0;
@@ -104,6 +128,7 @@ ul.items {
 	border: 1px solid #efe0e0;
 	background-color: #0f190e;
 	text-align: center;
+	margin-bottom: 10%;
   }
 
   ul.link-list > li > a > img {
@@ -967,6 +992,8 @@ ul.items {
 
 		.row > .col-8 {
 			width: 66.66667%;
+			margin-right: auto;
+			margin-left: auto;
 		}
 
 		.row > .off-8 {
@@ -3687,6 +3714,12 @@ ul.items {
 					margin: 0;
 				}
 
+				.profile{
+					margin-left: auto;
+					margin-right:auto;
+					border-radius: 10%;
+				}
+
 				#banner .content header p {
 					margin: 0.5em 0 0 0;
 					top: 0;
@@ -3741,7 +3774,7 @@ ul.items {
 
 	#footer {
 		background: #272833;
-		padding: 6em 0;
+		padding: 1em 0;
 		text-align: center;
 	}
 
@@ -3852,7 +3885,7 @@ ul.items {
 		/* Footer */
 
 			#footer {
-				padding: 4.5em 0;
+				padding: 1em 0;
 			}
 
 	}
@@ -4249,7 +4282,7 @@ ul.items {
 		/* Footer */
 
 			#footer {
-				padding: 3.25em 1.5em;
+				padding: 1em 1.5em;
 			}
 
 	}
@@ -4594,6 +4627,10 @@ ul.items {
     transition: all .25s ease-in-out;
     outline: 0;
 }
+#copyright{
+	margin-top: 1em;
+	margin-bottom: 0;
+}
 
 a {
     -moz-transition: color .25s ease-in-out;
@@ -4601,7 +4638,7 @@ a {
     -ms-transition: color .25s ease-in-out;
     transition: color .25s ease-in-out;
     /* text-decoration: underline; */
-	color: #8cd342;
+	color: #eafbec;
 	display: inline-block;
 }
 
