--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 		<title>Casting Agency</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="static/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="static/assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://vr-casting-agency.herokuapp.com/static/assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="https://vr-casting-agency.herokuapp.com/static/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
@@ -41,7 +41,7 @@
 								we take pride in being able to deliver the unusual<br />
 								or source individuals with both specialist skills and looks.</p>
 						</header>
-						<span class="image"><img id="profileImage" src="static/images/pic01.jpg" alt="Profile Image" /></span>
+						<span class="image"><img id="profileImage" src="https://vr-casting-agency.herokuapp.com/static/images/pic01.jpg" alt="Profile Image" /></span>
 						{% block content %}{% endblock %}
 					</div>
 					<!-- <a href="#two" class="goto-next scrolly">Next</a> -->
@@ -154,7 +154,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="static/images/pic03.jpg" alt="" /></span>
+					<span class="image fit main"><img src="https://vr-casting-agency.herokuapp.com/static/images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Bespoke Casting</h2>
@@ -180,25 +180,6 @@
 
 			<!-- Footer -->
 				<footer id="footer"> 
-					<!-- <div class="four modules footer-menu footer-content">
-						<nav class="footer-category">
-							<h4 class="footer-heading"> AGENCY</h4>
-							<div class="list">
-								<div class="item">
-									<a class="link" href="#">Pricing</a>
-								</div>
-								<div class="item">
-									<a class="link" href="#">Pricing</a>
-								</div>
-								<div class="item">
-									<a class="link" href="#">Pricing</a>
-								</div>
-								<div class="item">
-									<a class="link" href="#">Pricing</a>
-								</div>
-							</div>
-						</nav>
-					</div>  -->
 					<ul class="icons">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -207,21 +188,73 @@
 						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
+
+
+					<div class="container">
+						<div class="row">
+							<div class="col-8 col-12-medium">
+	
+								<!-- Links -->
+									<section>
+										<div>
+											<div class="row">
+												<div class="col-3 col-12-small">
+													<ul class="last-child">
+														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="#">Sed mattis quis rutrum</a></li>
+														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="#">Eu varius vitae magna</a></li>
+													</ul>
+												</div>
+												<div class="col-3 col-12-small">
+													<ul class="last-child">
+														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="#">Sed mattis quis rutrum</a></li>
+														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="#">Eu varius vitae magna</a></li>
+													</ul>
+												</div>
+												<div class="col-3 col-12-small">
+													<ul class="last-child">
+														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="#">Sed mattis quis rutrum</a></li>
+														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="#">Eu varius vitae magna</a></li>
+													</ul>
+												</div>
+												<div class="col-3 col-12-small">
+													<ul class="last-child">
+														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="#">Sed mattis quis rutrum</a></li>
+														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="#">Eu varius vitae magna</a></li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</section>
+	
+							</div>
+						</div>
+					</div>
+
+					<!-- Copyright -->
+				<div id="copyright">
+					&copy; Casting Agency. All rights reserved. | App: Victoria Rotaru</a>
+				</div>
 				</footer>
 				
 
 		</div>
 
 		<!-- Scripts -->
-			<script src="static/assets/js/jquery.min.js"></script>
-			<script src="static/assets/js/jquery.scrolly.min.js"></script>
-			<script src="static/assets/js/jquery.dropotron.min.js"></script>
-			<script src="static/assets/js/jquery.scrollex.min.js"></script>
-			<script src="static/assets/js/browser.min.js"></script>
-			<script src="static/assets/js/breakpoints.min.js"></script>
-			<script src="static/assets/js/main.js"></script>
-			<script src="{{ url_for('static', filename='assets/js/script.js') }}"></script>
-			
-			 <!-- <script src="static/assets/js/script.js"></script> -->
+			<script src="https://vr-casting-agency.herokuapp.com/static/assets/js/jquery.min.js"></script>
+			<script src="https://vr-casting-agency.herokuapp.com/static/assets/js/jquery.scrolly.min.js"></script>
+			<script src="https://vr-casting-agency.herokuapp.com/static/assets/js/jquery.dropotron.min.js"></script>
+			<script src="https://vr-casting-agency.herokuapp.com/static/assets/js/jquery.scrollex.min.js"></script>
+			<script src="https://vr-casting-agency.herokuapp.com/static/assets/js/browser.min.js"></script>
+			<script src="https://vr-casting-agency.herokuapp.com/static/assets/js/breakpoints.min.js"></script>
+			<script src="https://vr-casting-agency.herokuapp.com/static/assets/js/main.js"></script>
+			<script src="https://vr-casting-agency.herokuapp.com/static/assets/js/script.js"></script>
 	</body>
 </html>
