--- a/templates/show_movie.html
+++ b/templates/show_movie.html
@@ -9,48 +9,46 @@
 							<!-- Left Sidebar -->
 								<section>
 									<header>
-										<h3>Experince in Acting </h3>
+										<h3>Cast </h3>
 									</header>
 									<!-- <div class="listbar">
 										<a href="#" class="control_next"></a>
 									</div> -->
-									
+									{% if movies[0].actor_id %}
 									<ul id="slider" class="link-list">
-										{% for actor in actors %}
-										<li><a href="#"><img src="https://vr-casting-agency.herokuapp.com/{{actor.movie_image}}" alt="{{actor.movie_title}}" /></a>
-											<a href="https://vr-casting-agency.herokuapp.com/movies/{{actor.movie_id}}">{{actor.movie_title}}</a>
+										{% for actor in movies %}
+										<li><a href="https://vr-casting-agency.herokuapp.com/actors/{{actor.actor_id}}"><img src="https://vr-casting-agency.herokuapp.com/{{actor.actor_image}}" alt="{{actor.actor_name}}" /></a>
+											<a href="https://vr-casting-agency.herokuapp.com/actors/{{actor.actor_id}}">{{actor.actor_name}}</a>
 										</li>
 										{% endfor %}
 									</ul>
+									{% else %}
+									<ul id="slider" class="link-list">
+										<li>
+											No actors from existing list Acting in this Movie.
+										</li>
+									</ul>
+									{% endif %}
 									<!-- <div class="listbardown">
 										<a href="#" class="control_up"></a>
 									</div> -->
 									
-								<!-- </section>
-								<section>
-									<header>
-										<h3>Applied for</h3>
-									</header>
-									<ul class="link-list">
-										{% for actor in actors %}
-										<li><a href="#"><img src="https://vr-casting-agency.herokuapp.com/{{actor.movie_image}}" alt="{{actor.actor_name}}" /></a></li>
-										<li><a href="#">Ligula non varius</a></li>
-										{% endfor %}
-									</ul>
-								</section> -->
+								</section> 
+								
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 
 							<!-- Main Content -->
-								<section>
+								<section style="text-align: center;">
+									{% if movies[0].movie_image %}
+									<img class="profile" src="https://vr-casting-agency.herokuapp.com/{{movies[0].movie_image}}" alt="{{movies[0].movie_title}}" />
 									
-									<img src="https://vr-casting-agency.herokuapp.com/{{actors[0].actor_image}}" alt="{{actors[0].actor_name}}" />
-									<header>
-										<h2>{{actors[0].actor_name}}</h2>
-									</header>
-									<p>
-										{{actors[0].actor_description}}
-									</p>
+										<h2>{{movies[0].movie_title}}</h2>
+									{% else %}
+									<img class="profile" src="https://vr-casting-agency.herokuapp.com/{{movies[0].image}}" alt="{{movies[0].name}}" />
+									
+										<h2>{{movies[0].name}}</h2>
+									{% endif %}
 									<p>
 										Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
 										mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
@@ -65,32 +63,48 @@
 						<div class="col-3 col-12-medium">
 
 							<!-- Right Sidebar -->
-								<section>
+							<section>
+								<header>
+									<h3>Assign Actors to this Movie</h3>
+								</header>
+								<form class="cast-form">
+									<div>
+										<span class="form-label">Movie Title</span>
+										{% if movies[0].movie_title %}
+										<input type="text" id="cast-movie-title" value="{{movies[0].movie_title}}"  data-castId="{{ movies[0].movie_id }}">
+										{% else %}
+										<input type="text" id="cast-movie-title" value="{{movies[0].title}}" data-castId="{{ movies[0].movie_id }}">
+										{% endif %}
+									</div>
+									<div>
+										<span class="form-label">Actor Name</span>
+										<select name="cast-actor-name" id="cast-actor-name">
+											<option value="null"></option>
+											{% for actor in movies|last %}	
+											<option value="{{actor.id}}">{{actor.name}}</option>
+											{% endfor %}
+											
+										</select>
+										
+									</div>
+								<button type="submit" class="button primary" id="submit-cast-form1">Assign</button>
+							  </form>
+							</section>
+
+								<section style="text-align: center;">
 									<header>
-										<h2>Magna Phasellus</h2>
+										<h3>Details:</h3>
 									</header>
 									<ul class="link-list">
-										<li><a href="#">Sed dolore viverra</a></li>
-										<li><a href="#">Ligula non varius</a></li>
-										<li><a href="#">Nec sociis natoque</a></li>
-										<li><a href="#">Penatibus et magnis</a></li>
-										<li><a href="#">Dis parturient montes</a></li>
-										<li><a href="#">Nascetur ridiculus</a></li>
-									</ul>
-								</section>
-								<section>
-									<header>
-										<h2>Ipsum Dolor</h2>
-									</header>
-									<p>
-										Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-										iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat.
-									</p>
-									<ul class="link-list">
-										<li><a href="#">Sed dolore viverra</a></li>
-										<li><a href="#">Ligula non varius</a></li>
-										<li><a href="#">Dis parturient montes</a></li>
-										<li><a href="#">Nascetur ridiculus</a></li>
+										{% if movies[0].movie_title %}
+											Producer's Email: <li><a href="#">{{movies[0].movie_title}}@gmail.com</a></li>
+											Producer's Phone: <li><a href="#">+77128765432</a></li>
+											Producer's LinkedIn: <li><a href="#">{{movies[0].movie_title}}.linkdin.com</a></li>
+										{% else %}
+											Producer's Email: <li><a href="#">{{movies[0].name}}@gmail.com</a></li>
+											Producer's Phone: <li><a href="#">+77128765432</a></li>
+											Producer's LinkedIn: <li><a href="#">{{movies[0].name}}.linkdin.com</a></li>
+										{% endif %}
 									</ul>
 								</section>
 
