--- a/templates/index.html
+++ b/templates/index.html
@@ -240,7 +240,7 @@
 
 					<!-- Copyright -->
 				<div id="copyright">
-					&copy; Casting Agency. All rights reserved. | App: Victoria Rotaru</a>
+					&copy; Casting Agency. All rights reserved. | Author: Victoria Rotaru</a>
 				</div>
 				</footer>
 				
